# gtranslator

./: pyproject.toml  readme.md  translator.py
