[tool.poetry]
name = "gtranslator"
version = "0.0.1"
description = ""
authors = ["kamalynx <kamalynxpro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.3"
markupsafe = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
